src/objects/MDM_Brand__c.object
<CustomObject>
    <description>Brand</description>
    <fields>
        <fullName>BrandID__c</fullName>
        <description>This ID will be EnterpriseID.Whereas Data steward has control over the org refresh.</description>
        <displayFormat>BD-{000000000}</displayFormat>
        <label>BrandID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <externalId>true</externalId>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ManufacturerEnterpriseID__c</fullName>
        <formula>Manufacturer__r.EnterpriseID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ManufacturerEnterpriseID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Manufacturer</description>
        <inlineHelpText>Manufacturer</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MDM_Manufacturer__c.EnterpriseID__c</field>
                <operation>startsWith</operation>
                <value>MG-</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MDM_Manufacturer__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dynamic</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>KORDITE</value>
        </filters>
        <label>Dynamic</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MDM_Brand_Name_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),       
IF(AND (UPPER(Name) == UPPER(VLOOKUP($ObjectType.MDM_Brand__c.Fields.Name,$ObjectType.MDM_Brand__c.Fields.Name, Name)),
    Manufacturer__c ==       VLOOKUP($ObjectType.MDM_Brand__c.Fields.Manufacturer__c,$ObjectType.MDM_Brand__c.Fields.Name, Name)
),true , false),


AND
(ISCHANGED(Name),
IF( AND(UPPER(Name) == UPPER(VLOOKUP($ObjectType.MDM_Brand__c.Fields.Name,$ObjectType.MDM_Brand__c.Fields.Name, Name)),
Manufacturer__c ==       VLOOKUP($ObjectType.MDM_Brand__c.Fields.Manufacturer__c,$ObjectType.MDM_Brand__c.Fields.Name, Name)
),true,  false)
)
)</errorConditionFormula>
        <errorMessage>Duplicate Brand Name For the MAnufacturer. Name already exist</errorMessage>
    </validationRules>
</CustomObject>